--- a/package.json
+++ b/package.json
@@ -17,8 +17,14 @@
   },
   "homepage": "https://github.com/marcoschneider/ecmaScript6#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "download-file": "^0.1.5",
     "express": "^4.16.3",
+    "express-fileupload": "^0.4.0",
+    "fileupload": "^1.0.0",
+    "fs": "0.0.1-security",
     "http": "0.0.0",
+    "node-dir": "^0.1.17",
     "purecss": "^1.0.0"
   }
 }
