--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/marcoschneider/ecmaScript6#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "download-file": "^0.1.5",
     "express": "^4.16.3",
     "express-fileupload": "^0.4.0",
@@ -26,5 +27,14 @@
     "http": "0.0.0",
     "node-dir": "^0.1.17",
     "purecss": "^1.0.0"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.24.4",
+    "gulp": "^3.9.1",
+    "gulp-notify": "^3.2.0",
+    "gulp-plumber": "^1.2.0",
+    "gulp-sass": "^4.0.1",
+    "gulp-sass-glob": "^1.0.9",
+    "gulp-sourcemaps": "^2.6.4"
   }
 }
